@@ -10,6 +10,10 @@ What's New in Stackless 2.7.XX?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/123
+  Fix a rare assertion violation during interpreter shutdown with active
+  daemon threads.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/121
   Fix a reference leak. If Python clears a thread state and a destructor or a
   weakref-callback runs Python code, Python used to leak a reference to a
